--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <figcaption>Nature</figcaption>
 </figure>
 <h2>IMAGE</h2>
-<img src="ASSET/2im.avif" height="300" width="500">
+<img src="ASSET/pexels-peter-patel-5275284.jpg" height="300" width="500">
 
 <h2>STUDENT SCORES</h2>
 <table border="1" cellpadding="10">
