--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
     <th>score</th>
 </tr>
 <tr>
-    <td>sujith</td>
-    <td>90</td>
+    <td>srinath</td>
+    <td>10s0</td>
 </tr>
 <tr>
-    <td>aravindh</td>
+    <td>ravi</td>
     <td>95</td>
 </tr>
 <tr>
-    <td>shiju</td>
-    <td>80</td>
+    <td>sujin</td>
+    <td>87</td>
 </tr>
 </table>
 </body>
